implemet "search/visited" API
